// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters Adds selected values to appropriate fields 1`] = `
<form>
  <fieldset>
    <legend>
      <strong>
        Filter
      </strong>
      <button
        className="btn-clearFilters"
      >
        × Clear All
      </button>
    </legend>
    <label
      htmlFor="searchTerm"
    >
      Name
      <input
        aria-label="Name"
        className="css-iyqgnx"
        id="searchTerm"
        name="searchTerm"
        onChange={[Function]}
        placeholder="Start typing..."
        type="text"
        value="Code"
      />
    </label>
    <label
      htmlFor="resourceFormat"
    >
      Format
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceFormat"
          name="resourceFormat"
          onChange={[Function]}
          value="Article"
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Article"
          >
            Article
          </option>
          <option
            value="Interactive"
          >
            Interactive
          </option>
          <option
            value="Tutorial"
          >
            Tutorial
          </option>
          <option
            value="Video"
          >
            Video
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
    <label
      htmlFor="resourceFocus"
    >
      Focus
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceFocus"
          name="resourceFocus"
          onChange={[Function]}
          value="Front-end"
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Front-end"
          >
            Front-end
          </option>
          <option
            value="Multiple"
          >
            Multiple
          </option>
          <option
            value="Algorithms"
          >
            Algorithms
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
    <label
      htmlFor="resourceSkillLevel"
    >
      Skill Level
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceSkillLevel"
          name="resourceSkillLevel"
          onChange={[Function]}
          value="Beginner"
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Beginner"
          >
            Beginner
          </option>
          <option
            value="Moderate"
          >
            Moderate
          </option>
          <option
            value="Advanced"
          >
            Advanced
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
  </fieldset>
</form>
`;

exports[`Filters renders correctly 1`] = `
<form>
  <fieldset>
    <legend>
      <strong>
        Filter
      </strong>
    </legend>
    <label
      htmlFor="searchTerm"
    >
      Name
      <input
        aria-label="Name"
        className="css-iyqgnx"
        id="searchTerm"
        name="searchTerm"
        onChange={[Function]}
        placeholder="Start typing..."
        type="text"
        value=""
      />
    </label>
    <label
      htmlFor="resourceFormat"
    >
      Format
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceFormat"
          name="resourceFormat"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Article"
          >
            Article
          </option>
          <option
            value="Interactive"
          >
            Interactive
          </option>
          <option
            value="Tutorial"
          >
            Tutorial
          </option>
          <option
            value="Video"
          >
            Video
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
    <label
      htmlFor="resourceFocus"
    >
      Focus
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceFocus"
          name="resourceFocus"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Front-end"
          >
            Front-end
          </option>
          <option
            value="Multiple"
          >
            Multiple
          </option>
          <option
            value="Algorithms"
          >
            Algorithms
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
    <label
      htmlFor="resourceSkillLevel"
    >
      Skill Level
      <div
        className="css-4cffwv"
      >
        <select
          className="css-iyqgnx"
          id="resourceSkillLevel"
          name="resourceSkillLevel"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          >
            All
          </option>
          <option
            value="Beginner"
          >
            Beginner
          </option>
          <option
            value="Moderate"
          >
            Moderate
          </option>
          <option
            value="Advanced"
          >
            Advanced
          </option>
        </select>
        <svg
          className="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </label>
  </fieldset>
</form>
`;
